# stock-news-pro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  IDEAS.md  LASTENHEFT.md  LICENSE  Makefile  PROMPTS.md  README.md  STYLEGUIDE.md  SYSTEM_REPORT.md  TECHNICAL_SPEC.md  ai_prompt_intro.md  debug_data_fetch.py  debug_language_v2.txt  package-lock.json  package.json  start_clean.sh  sync.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai_service/: MOCK_INFO.md  config.py  database.py  health.py  main.py  models.py  requirements-dev.txt  requirements.txt  theme_service.py
ai_service/analyzers/: __init__.py  base.py  base_client.py  essay_generator.py  gemini_client.py  groq_client.py  huggingface_client.py  impact_analyzer.py  ollama_client.py  openai_client.py  openrouter_client.py  perplexity_client.py  prompts.py  provider_factory.py
ai_service/api/: __init__.py  engine.py
ai_service/data/: ticker_cache.json
ai_service/fetchers/: __init__.py  content_fetcher.py  deep_collector.py  historic_analyzer.py  reddit_fetcher.py  stocktwits_fetcher.py
ai_service/mock/: __init__.py  (+3 more)
docs/: ARCHITECTURE_FREEZE_MARKER.md  RELEASE_CHECKLIST.md
engine/: CMakeLists.txt
engine/src/: api_client.cpp  api_client.h  database.c  database.h  dispatcher.cpp  dispatcher.h  main.cpp
engine/tests/: test_api_client.cpp
frontend/: package-lock.json  package.json  vite.config.ts
gui/: debug_language.txt  pom.xml
shared/: models.proto
system_reports/: SYSTEM_REPORT_GEMINI_2026-01-21.md  SYSTEM_REPORT_GEMINI_2026-01-21_V2.md  SYSTEM_REPORT_GEMINI_2026-01-22.md
(+65 files in other folders)
